# Toxopy

./: .deepsource.toml  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  rebase.yml
conda-envs/: toxopy-cpu.yaml  toxopy-gpu.yaml
toxopy/: AnovaRM_diff.py  MannWhitney_U.py  PlotPCA.py  PlotTurnPoints.py  __init__.py  all_in_one.py  analyze_rois.py  analyze_turnpoints.py  calc_dlc_mw.py  calc_mw.py  calculate_vars.py  combine_dlc_improved.py  concat_csv.py  concat_rois.py  correct_times.py  create_time_diff_data.py  csv2h5.py  csv_to_h5.py  csv_util.py  csv_utils.py  data_utils.py  dlc_avgs.json  dlcboxplot.py  dlcpyjob.py  ffconcat.py  ffmpeg_concat_trials.py  ffsync.py  find_distance.py  find_parametes.py  find_tps_velocity_values.py  find_turnpoints_diff.py  fwarnings.py  improve_dlc_csv.py  improve_dlc_output.py  improve_dlc_output_cat_alone.py  improve_turnpoints.py  json2tidycsv.py  jsonify_dlc_avgs_data.py  latency_mw.py  lazytrim.py  (+17 more)
toxopy/archived/: calculate_vars.py  find_distance.py
