[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "toxopy"
author = "fcatus"
author-email = "f.catus@pm.me"
home-page = "https://github.com/bchaselab/toxopy"
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3"
]

requires-python = ">=3.6"
requires = ["pandas", "dlcu", "numpy", "matplotlib", "tqdm", "scipy", "seaborn"]

